2008-03-13  Antti Koivisto  <antti@apple.com>

        Reviewed by Eric.

        Correct a few issues spotted by Mike Belshe. 

        * html/PreloadScanner.cpp:
        (WebCore::PreloadScanner::tokenize):
        * loader/loader.cpp:
        (WebCore::Loader::cancelRequests):

2008-03-13  Rodney Dawes  <dobey@wayofthemonkey.com>

        Fix GTK+ build for SharedBuffer changes.

        * platform/graphics/gtk/ImageGtk.cpp:
        (Image::loadPlatformResource):

2008-03-13  Steve Falkenburg  <sfalken@apple.com>

        More PGO build fixes.

        * WebCorePrefix.cpp:

2008-03-13  Antti Koivisto  <antti@apple.com>

        Reviewed by Darin.
        
        Make page loads go fast.
        
        http://bugs.webkit.org/show_bug.cgi?id=17480

        - Implement speculative preloading. When a script load blocks the main parser, use a side 
          parser to pick up more resources.
        - Implement per-host load queues, prioritize scripts and stylesheets over images.
        
        Depending on content and network latency this may speed things up quite a bit.

        * WebCore.xcodeproj/project.pbxproj:
        * dom/Document.cpp:
        (WebCore::Document::implicitClose):
        Clear the preloads after laoding completes.
        
        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::parseMappedAttribute):
        (WebCore::HTMLLinkElement::tokenizeRelAttribute):
        * html/HTMLLinkElement.h:
        Make tokenizeRelAttribute() public static so it can be used from elsewhere.
        Eliminate a pointless bitfield so I can get references.
        
        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::scriptHandler):
        (WebCore::HTMLTokenizer::scriptExecution):
        (WebCore::HTMLTokenizer::write):
        * html/HTMLTokenizer.h:
        Spin up the preload scanner whenever a script load blocks the parser. One scanner tracks the end of 