@@ -70,7 +70,7 @@ Image* Image::loadPlatformResource(const char *name)
 {
     Vector<char> arr = loadResourceIntoArray(name);
     Image* img = new BitmapImage();
-    RefPtr<SharedBuffer> buffer = new SharedBuffer(arr.data(), arr.size());
+    RefPtr<SharedBuffer> buffer = SharedBuffer::create(arr.data(), arr.size());
     img->setData(buffer, true);
     return img;
 }
