@@ -1,3 +1,11 @@
+2008-03-13  Adam Roben  <aroben@apple.com>
+
+        Windows build fix after r31034
+
+        * WebFrame.cpp:
+        (WebFrame::loadData): Use SharedBuffer::create.
+        (WebFrame::loadHTMLString): Ditto.
+
 2008-03-13  Steve Falkenburg  <sfalken@apple.com>
 
         More PGO build fixes.
